syntax = "proto3";

package grin;
option java_package = "com.alibaba.graphscope.proto.grin_schema";

enum DataType {
    DT_ANY = 0;
    DT_SIGNED_INT32 = 1;
    DT_UNSIGNED_INT32 = 2;
    DT_SIGNED_INT64 = 3;
    DT_UNSIGNED_INT64 = 4;
    DT_FLOAT = 5;
    DT_DOUBLE = 6;
    DT_STRING = 7;
    DT_DATE = 8;
    DT_TIME = 9;
    DT_TIMESTAMP = 10;
    DT_FLOAT_ARRAY = 11;
}


message StorageDataType {
    DataType datatype = 1;
    bool nullable = 2;
}
